WIP : Changing to read via iterators.