@@ -6,7 +6,7 @@ import java.util.*;
  * A list of packets that can be accessed by multiple threads concurrently.
  * This is to support different threads concurrently adding and removing packets.
  * A given packet may be seen multiple times via different mechanisms, but will no longer be returned once it is
- * either taken or removed via iterator. In other words, a packet can only be consumed once.
+ * either taken or removed via an iterator. In other words, a packet can only be consumed once.
  * Iterators will return null instead of throwing NoSuchElementException when the element that would have been returned
  * is consumed via a different method (possibly on a different thread).
  */
@@ -14,8 +14,9 @@ import java.util.*;
 // TODO Add thread safety tests.
 final class PacketList {
 
-    private final List<Packet> list = new ArrayList<>();
+    private final ConcurrentPacketList list = new ConcurrentPacketList();
 
+    // other
     Iterator<Packet> read() {
         return new Iterator<Packet>() {
 
@@ -23,7 +24,7 @@ final class PacketList {
 
             @Override
             public boolean hasNext() {
-                return lastRead==null ? !list.isEmpty() : areMoreAfter(lastRead);
+                return lastRead==null ? !list.isEmpty() : list.areMoreAfter(lastRead);
             }
 
             @Override
@@ -31,65 +32,32 @@ final class PacketList {
                 if (list.isEmpty()) {
                     return null;
                 }
-                lastRead = lastRead==null ? list.get(0) : after(lastRead);
+                lastRead = lastRead==null ? list.first() : list.after(lastRead);
                 return lastRead;
             }
 
             @Override
             public void remove() {
                 Packet toRemove = lastRead;
-                lastRead = before(toRemove);
+                lastRead = list.before(toRemove);
                 list.remove(toRemove);
             }
 
         };
     }
 
-    private boolean areMoreAfter(Packet packet) {
-        for (Iterator<Packet> i=list.iterator();i.hasNext();) {
-            if (packet.equals(i.next())) {
-                return i.hasNext();
-            }
-        }
-        return false;
+
+    // other
+    Iterator<Packet> read(String topic) {
+        return new PacketIteratorFilter(read(),new TopicPacketFilter(topic));
     }
 
-    private Packet after(Packet packet) {
-        for (Iterator<Packet> i=list.iterator();i.hasNext();) {
-            if (packet.equals(i.next())) {
-                return i.next();
-            }
-        }
-        return null;
-    }
-
-    private Packet before(Packet target) {
-        Packet candidate = null;
-        for (Iterator<Packet> i=list.iterator();i.hasNext();) {
-            Packet packet = i.next();
-            if (target.equals(packet)) {
-                return candidate;
-            }
-            candidate = packet;
-        }
-        return null;
-    }
-
-    Packet read(String topic) {
-        for (Iterator<Packet> i=read();i.hasNext();) {
-            Packet packet = i.next();
-            if (topic.equals(packet.topic)) {
-                i.remove();
-                return packet;
-            }
-        }
-        return null;
-    }
-
+    // network
     Packet take() {
-        return (list.isEmpty()) ? null : list.remove(0);
+        return (list.isEmpty()) ? null : list.removeFirst();
     }
 
+    // network or other
     void add(Packet packet) {
         list.add(packet);
     }
